Fix Rover button width on mobile (#1480)
* Fix Rover button width on mobile

* Update package version

--- a/src/app/pages/rover-by-openstax/popup/popup.scss
+++ b/src/app/pages/rover-by-openstax/popup/popup.scss
@@ -57,5 +57,6 @@
         display: grid;
         grid-auto-flow: row;
         grid-row-gap: 2rem;
+        grid-template-columns: 100%;
     }
 }
